--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
 
 /* BODY */
 body{
-  height: 100vh;
+  min-height: 100vh;
   font-family: 'Red Hat Display', sans-serif;
   font-size: 1rem;
   background: url(../images/pattern-background-desktop.svg);
